--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: meteo
 Type: Package
 Encoding: UTF-8
-Title: Spatio-Temporal Analysis and Mapping of Meteorological Observations
+Title: RFSI and spacetime geostatistical interpolations for meteorological and other enviromental varialbles
 Version: 1.0-1
 Date: 2015-09-22
 Author: Milan Kilibarda, Aleksandar Sekulic, Tomislav Hengl, Edzer Pebesma, Benedikt Graeler
 Maintainer: Milan Kilibarda <kili@grf.bg.ac.rs>
-Description: Spatio-temporal geostatistical mapping of meteorological data. Global spatio-temporal models calculated using publicly available data are stored in package.
+Description: RFSI and spacetime geostatistical interpolations for meteorological and other enviromental varialbles. Global spatio-temporal models calculated using publicly available data are stored in package.
 License: GPL (>= 2.0) | file LICENCE
 URL: http://meteo.r-forge.r-project.org/
 LazyLoad: yes
