--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,5 @@ import(sp,
   ranger,
   caret,
   DescTools)
-export(meteo2STFDF, tgeom2STFDF, tiling, rfillspgaps, rfilltimegaps, rm.dupl, pred.strk.old, pred.strk, pred.strk1, cv.strk, acc.metric.fun, near.obs, rfsi, pred.rfsi, tune.rfsi, cv.rfsi)
+export(meteo2STFDF, tgeom2STFDF, tiling, rfillspgaps, rfilltimegaps, rm.dupl, pred.strk.old, pred.strk, pred.strk1, cv.strk, acc.metric.fun, near.obs, near.obs.soil, rfsi, pred.rfsi, tune.rfsi, cv.rfsi)
 
