--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: meteo
 Type: Package
 Encoding: UTF-8
 Title: RFSI and spacetime geostatistical interpolations for meteorological and other enviromental varialbles
-Version: 2.0-1
+Version: 2.0-2
 Date: 2015-09-22
 Author: Milan Kilibarda, Aleksandar Sekulić, Tomislav Hengl, Edzer Pebesma, Benedikt Graeler
 Maintainer: Aleksandar Sekulić <asekulic@grf.bg.ac.rs>, Milan Kilibarda <kili@grf.bg.ac.rs>
@@ -11,4 +11,4 @@ License: GPL (>= 2.0) | file LICENCE
 URL: http://meteo.r-forge.r-project.org/
 LazyLoad: yes
 Depends: R (>= 4.0.0)
-Imports: methods, utils, stats, sp, spacetime, rgdal, gstat, raster, snowfall, doParallel, plyr, nabor, CAST, ranger, caret, DescTools, sf, sftime, terra
+Imports: methods, utils, stats, sp, spacetime, gstat, snowfall, doParallel, plyr, nabor, CAST, ranger, caret, DescTools, sf, sftime, terra
