--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Version: 2.0-2
 Date: 2023-10-09
 Type: Package
 Encoding: UTF-8
-Title: RFSI and Spacetime Geostatistical Interpolations for Meteorological and Other Enviromental Varialbles
+Title: RFSI and Spatio-temporal Geostatistical Interpolation for Meteorological and Other Environmental Variables
 Authors@R: c(person("Milan", "Kilibarda", role = c("aut"), email = "kili@grf.bg.ac.rs", comment = c(ORCID = "0000-0002-2930-3596")),
              person("Aleksandar", "Sekulić", role = c("aut", "cre"), email = "asekulic@grf.bg.ac.rs", comment = c(ORCID = "0000-0002-5515-2779")),
              person("Tomislav", "Hengl", role = c("ctb")),
@@ -16,7 +16,7 @@ Author: Milan Kilibarda [aut] (<https://orcid.org/0000-0002-2930-3596>),
         Benedikt Graeler [ctb]
 Maintainer: Aleksandar Sekulić <asekulic@grf.bg.ac.rs>
 Depends: R (>= 4.0.0)
-Description: RFSI and spacetime geostatistical interpolations for meteorological and other enviromental varialbles. Global spatio-temporal models calculated using publicly available data are stored in package.
+Description: RFSI and spatio-temporal geostatistical interpolation for meteorological and other environmental variables. Global spatio-temporal models calculated using publicly available data are stored in package.
 License: GPL (>= 2.0) | file LICENCE
 URL: https://www.r-pkg.org/pkg/meteo, https://r-forge.r-project.org/projects/meteo/, https://github.com/AleksandarSekulic/Rmeteo
 LazyLoad: yes
